--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       
-main # Adjust this to match your branch name
+master # Adjust this to match your branch name
 
 jobs:
   run-cypress:
