--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: node:16-alpine
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Cypress
