--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install Cypress
-        run: npm install
+        run: npm install cypress --save-dev
       - name: Run Cypress tests
         run: npm run runtests
