--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
-name: Run Cypress tests
+name: Push Event
 
 on:
   push:
     branches:
-      - master
+      master
 
 jobs:
-  test:
+  trigger_cypress_tests:
     runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Cypress
-        run: npm install cypress --save-dev
-      - name: Run Cypress tests
-        run: npm run runtests
+    
+name: Trigger Cypress Tests
+    uses: peter-evans/repository-dispatch@v1
+    with:
+      token: ${{ secrets.REPO_A_TOKEN }}
+      repository: Avadhraj7/VepaarJenkin
+      event-type: run-cypress-tests
