--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,9 @@ jobs:
     name: Build and test
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: Avadhraj7/VepaarJenkin-dispatch@v1
         with:
-          # Action runs: using: node16 as defined in
-          # https://github.com/cypress-io/github-action/blob/master/action.yml
-          # Node.js minor version is aligned to
-          # https://github.com/actions/runner/blob/main/src/Misc/externals.sh
-          node-version: 16.16.0
+          token: ${{ secrets.REPO_A_TOKEN }}
+          repository: Avadhraj7/VepaarJenkin
+          event-type: run-cypress-tests
       - run: npm run runtests
