--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build and test
     steps:
       - name: Checkout
-        uses: Avadhraj7/repository-dispatch@v1
+        uses: actions/checkout@v1
         with:
           token: ${{ secrets.REPO_A_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
