--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build and test
     steps:
       - name: Checkout
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.REPO_A_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
