--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
           ref: master
 
       - name: Trigger Repository B
-        uses: peter-evans/repository-dispatch@v1
+        uses: Avadhraj7/repository-dispatch@v1
         with:
           token: ${{ secrets.REPO_A_TOKEN }}
-          repository: Avadhraj/VepaarJenkin
+          repository: Avadhraj7/VepaarJenkin
           event-type: run-tests
