--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Trigger Repository B
         uses: Avadhraj7/repository-dispatch@v1
         with:
-          token: ${{ secrets.REPO_A_TOKEN }}
+          token: ${{ secrets.REPO_B_ACCESS_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
           event-type: run-tests
