--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           ref: master
 
       - name: Trigger Repository B
-        uses: Avadhraj7/repository-dispatch@v1
+        uses: Avadhraj7/VepaarJenkin@v1
         with:
           token: ${{ secrets.REPO_B_ACCESS_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
