--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           ref: master
 
       - name: Trigger Repository B
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.REPO_B_ACCESS_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
