--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,12 @@ jobs:
         with:
           token: ${{ secrets.REPO_B_ACCESS_TOKEN }}
           repository: Avadhraj7/VepaarJenkin
-          run: npm test
+          ssh-strict: true
+          persist-credentials: true
+          clean: true
+          fetch-depth: 1
+          lfs: false
+          submodules: false
+          set-safe-directory: true
+      - name: Run tests
+        run: npm test
