--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,13 @@ jobs:
   test:
     runs-on: windows-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Avadhraj7/VepaarJenkin
         uses: actions/checkout@v2
         with:
           repository: Avadhraj7/VepaarJenkin
           ref: master
-
-      - name: Trigger Repository B
-        uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.REPO_B_ACCESS_TOKEN }}
-          repository: Avadhraj7/VepaarJenkin
-          ssh-strict: true
-          persist-credentials: true
-          clean: true
-          fetch-depth: 1
-          lfs: false
-          submodules: false
-          set-safe-directory: true
-      - name: Run tests
-        run: npm test
+      - name: Install dependencies
+        run: npm ci
+        working-directory: Avadhraj7/VepaarJenkin
+      - name: Run Cypress tests
+        run: npm run
