--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
           repository: Avadhraj7/VepaarJenkin
           ref: master
       - name: Run Cypress tests
-        run: cypress run
+        run: npx run runtests
