--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Install Cypress
         run: npm install cypress --save-dev
       - name: Run Cypress tests
-        run: npx run runtests
+        run: npm run runtests
